# FroboMind

./: isaac_test_for_passwords.txt
fmApp/TurboApp/kalman_convention_fix/: CMakeLists.txt  package.xml
fmApp/TurboApp/kalman_convention_fix/launch/: tf_test.launch
fmApp/TurboApp/kalman_convention_fix/src/: kalman_convention_fix_node.cpp
fmApp/TurboApp/pose_estimator/: CMakeLists.txt  package.xml
fmApp/TurboApp/pose_estimator/src/: pose_estimator.py  pose_estimator_node.py
fmApp/TurboApp/pose_to_estimate/: CMakeLists.txt  package.xml
fmApp/TurboApp/pose_to_estimate/action/: PoseEstimate.action
fmApp/TurboApp/pose_to_estimate/src/: pose_from_marker.py  testClient.py
fmApp/TurboApp/recharge_action_server/: CMakeLists.txt  package.xml  setup.py
fmApp/TurboApp/recharge_action_server/action/: recharge.action
fmApp/TurboApp/recharge_action_server/scripts/: RechargeActionServer.py
fmApp/TurboApp/rsd_mes_client/: CMakeLists.txt
fmApp/TurboApp/rsd_mes_client/scripts/: rsd_mes_client_node.py  rsd_mes_mobile_client_node.py
fmApp/TurboApp/socket_pose/: CMakeLists.txt  package.xml
fmApp/TurboApp/socket_pose/launch/: example.launch
fmApp/TurboApp/socket_pose/src/: tcp_client.py
fmApp/TurboApp/tipper_action/: CMakeLists.txt  package.xml
fmApp/TurboApp/tipper_action/action/: tipper.action
fmApp/TurboApp/tipper_action/src/: client.cpp  server.cpp
fmApp/TurboApp/tipper_unit/: CMakeLists.txt  package.xml
fmApp/TurboApp/tipper_unit/launch/: tipper.launch
fmApp/TurboApp/tipper_unit/src/: tipper.cpp  tipper.h
fmApp/TurboUlla/: .spyderworkspace  CMakeLists.txt  fmMake.txt  package.xml  setup.py
fmApp/TurboUlla/config/: amcl.launch.xml  base_local_planner_params.yaml  base_local_planner_params.yaml.save  costmap_common_params.yaml  costmap_common_params_sim.yaml  rviz.rviz
fmApp/TurboUlla/launch/: TurboUlla.launch  line_action_without_client.launch  rsd_oee_calculator.launch  test_amcl.launch  test_decisionLayer.launch  test_gmapping.launch  test_imu.launch  test_line_backwards.launch  test_line_navigation.launch  test_linefollowing.launch  test_lps.launch  test_manual_control.launch  test_planning.launch
fmApp/TurboUlla/launch/include/: camera_line_barcode.launch  camera_nodes.launch  imu.launch  kalman.launch  lidar.launch  line_action_without_client.launch  line_action_without_client_backwards.launch  line_following.launch  localizer.launch  lps.launch  lps_pose_estimate.launch  manual_control.launch  mes_communication.launch  planner.launch  platform.launch  rviz.launch  tipper.launch
fmApp/TurboUlla/maps/: dispenser.pgm  dispenser.yaml
fmApp/TurboUlla/msg/: oee_data.msg
fmApp/TurboUlla/oee_calculator/: oee_node.py
fmApp/TurboUlla/scripts/: .spyderworkspace  decisionLayer.py  manualMES.py  publishOdomAsGPGGA.py  smachViewerTest.py  test geometry_msgs.py
fmApp/TurboUlla/stage/: frobitpro_robolab_rsd.world
fmApp/amcl/src/: amcl_node.cpp
fmApp/sdu/sdu_udev_rules/: tipper.rules
fmDecisionMakers/behaviours/pid_controller/: CMakeLists.txt  lineFollowFSM.py  package.xml
fmDecisionMakers/behaviours/pid_controller/scripts/: lineFollowFSM.py  lineFollowFSM_backwards.py  listener.py
fmDependencies/RSD2014MarkerLocator/: README.md
fmExecutors/platform/line_til_cross_action/: CMakeLists.txt  package.xml
fmExecutors/platform/line_til_cross_action/action/: Gocell.action
fmExecutors/platform/line_til_cross_action/msg/: Num.msg
fmExecutors/platform/line_til_cross_action/src/: action_client.cpp  action_client_robot_1.cpp  action_client_robot_x.cpp  action_server.cpp
fmExecutors/platform/line_til_cross_action_backwards/: CMakeLists.txt  package.xml
fmExecutors/platform/line_til_cross_action_backwards/src/: action_client.cpp  action_client_rob_3.cpp  action_server.cpp
fmExecutors/platform/spin_90_degrees/: CMakeLists.txt  package.xml
fmExecutors/platform/spin_90_degrees/action/: spin_degrees.action
fmExecutors/platform/spin_90_degrees/src/: client.cpp  client_left.cpp  server.cpp
fmExecutors/platform/waypoint_action_server/: CMakeLists.txt  package.xml
fmExecutors/platform/waypoint_action_server/scripts/: waypoint_action_node.py
fmHMI/rqt_man/: CMakeLists.txt  package.xml  plugin.xml  setup.py
fmHMI/rqt_man/msg/: gui_command.msg
fmHMI/rqt_man/resource/: man_widget.ui
fmHMI/rqt_man/scripts/: rqt_man
fmHMI/rqt_man/src/rqt_man/: man.py  man_widget.py
fmLib/msg_converters/twist_to_twist_stamped/: CMakeLists.txt  package.xml
fmLib/msg_converters/twist_to_twist_stamped/scripts/: cmd_vel_converter.py
fmLib/platform_support/sdu_frobit_v2/src/: frobit_interface_node.py
fmProcessors/localization_mapping/amcl_localizer/: CMakeLists.txt  package.xml
fmProcessors/localization_mapping/amcl_localizer/launch/: .mapping.launch.swp  imu.launch  localizer.launch  mapping.launch  test_amcl.launch  test_gmapping.launch
fmProcessors/localization_mapping/amcl_localizer/maps/: dispenser.pgm  dispenser.yaml
fmProcessors/object_detection/test_package/: CMakeLists.txt  package.xml
fmSensors/local_sensing/cam/line_nodes/: CMakeLists.txt  package.xml
fmSensors/local_sensing/cam/line_nodes/src/: bar_code_detect.cpp  cv_functions.cpp  line_detector.cpp
fmSensors/local_sensing/cam/line_nodes/src/rsd_camera_functions/msg/: __init__.py  _line_points.py
fmSensors/local_sensing/cam/rsd_camera_functions/: CMakeLists.txt  manifest.xml  package.xml
fmSensors/local_sensing/cam/rsd_camera_functions/msg_gen/cpp/include/rsd_camera_functions/: Num.h  line_points.h
fmSensors/local_sensing/cam/rsd_camera_functions/msg_gen/lisp/: Num.lisp  _package.lisp  _package_Num.lisp  _package_line_points.lisp  line_points.lisp  rsd_camera_functions-msg.asd
fmSensors/local_sensing/cam/rsd_camera_functions/src/: bar_camera.cpp  bar_code_detect.cpp  cv_functions.cpp  cv_functions.h  lineFollowFSM.py  line_detector.cpp  my_publisher.cpp
fmSensors/local_sensing/cam/rsd_camera_functions/src/rsd_camera_functions/msg/: _Num.py
