<?xml version="1.0"?>
<package>
  <name>waypoint_action_server</name>
  <version>0.0.0</version>
  <description>The waypoint_action_server package</description>

  <maintainer email="dimx@todo.todo">leon</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>rospy</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>